kubernetes/06-query-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-service
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: pdec5504/query-service:latest
          ports:
            - containerPort: 6001
