kubernetes/07-analysis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: analysis-service
spec:
  selector:
    app: analysis-service
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analysis-service
  template:
    metadata:
      labels:
        app: analysis-service
    spec:
      containers:
        - name: analysis-service
          image: pdec5504/analysis-service:latest 
          ports:
            - containerPort: 7001
