kubernetes/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saitama-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost # change to current domain
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /api/routines(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: routines-service
                port:
                  number: 3001
          - path: /api/exercises(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: exercises-service
                port:
                  number: 4001
          - path: /api/query(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 6001
          - path: /api/analysis(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: analysis-service
                port:
                  number: 7001
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
